# AMTest

./: .gitignore  AMtestWin.sln  README.md
BackEnd/: BackEnd.vcxproj  BackEnd.vcxproj.filters
BackEnd/detail/: beBigCoordTypes.cpp  beBigCoordTypes.h  beBitmap.cpp  beConfig.h  beConsts.cpp  beConsts.h  beContentsGenerator.cpp  beContentsGenerator.h  beController.cpp  beControllerImpl.cpp  beControllerImpl.h  beDiagnostics.cpp  beDiagnostics.h  beDocument.cpp  beDocumentImpl.cpp  beDocumentImpl.h  beInstance.cpp  beInternalDocument.h  beInternalTypes.cpp  beInternalTypes.h  beIntervalTree.cpp  beIntervalTree.h  beMapReader.cpp  beMapReader.h  beMapStream.cpp  beRangeTree.cpp  beRangeTree.h  beSegmentsManager.cpp  beSegmentsManager.h  beTreeUtils.cpp  beTreeUtils.h  beTypes.cpp  beUtils.cpp  beUtils.h  beViewportArea.cpp  beViewportArea.h  ph.cpp  ph.h
BackEnd/h/: beBitmap.h  beController.h  beDocument.h  beInstance.h  beMapStream.h  beTypes.h
FrontEndAndroid/: AndroidManifest.xml  ant.properties  build.xml  settings.gradle
FrontEndAndroid/app/: build.gradle
FrontEndAndroid/app/src/main/: AndroidManifest.xml
FrontEndAndroid/app/src/main/cpp/: CMakeLists.txt  backendBridge.cpp
FrontEndAndroid/app/src/main/java/com/amtest/frontend/: AMPrefs.java  AMTest.java
FrontEndAndroid/app/src/main/res/layout/: preferences.xml
FrontEndAndroid/app/src/main/res/values/: themes.xml
FrontEndAndroid/app/src/main/res/values-night/: themes.xml
FrontEndAndroid/app/src/main/res/xml/: settings.xml
FrontEndAndroid/gradle/wrapper/: gradle-wrapper.properties
FrontEndAndroid/jni/: Android.mk  Application.mk  backendBridge.cpp
FrontEndAndroid/res/menu/: menu.xml
FrontEndAndroid/res/values/: strings.xml
FrontEndAndroid/res/xml/: settings.xml
FrontEndAndroid/src/com/amtest/frontend/: AMPrefs.java  AMTest.java
FrontEndWinAPI/: FrontEndWinAPI.cpp  FrontEndWinAPI.rc  FrontEndWinAPI.vcxproj  Resource.h  feView.cpp  feView.h  stdafx.cpp  stdafx.h
